--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
   dartz: ^0.10.1
+  equatable: ^2.0.5
+  bloc_concurrency: ^0.2.5
 
 dev_dependencies:
   flutter_test:
