--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.5
   bloc_concurrency: ^0.2.5
+  shared_preferences: ^2.2.3
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
