--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bloc_concurrency: ^0.2.5
   shared_preferences: ^2.2.3
   get_it: ^7.7.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
